styles.css
body {
  font: 14px/1.5em Helvetica, Arial, sans-serif
}

.controls {
  display: grid;
  grid-template-columns: 1fr 5fr 1fr 1fr;
  grid-row-gap: 10px;
  grid-column-gap: 10px;
  margin-bottom: 20px;
}

input[type="button"] {
  grid-row-start: 1;
  grid-row-end: 3;
  grid-column-start: 4;
  grid-column-end: 5;
}

input[type="button"][name="set"] {
  -webkit-appearance: button;
  font-size: 15px;
  padding: 1em 2em;
  visibility: hidden;
}

input[type="button"][name="set"].changes {
  visibility: visible;
}

.preview img {
  display: block;
  width: 100%;
}

form {
  display: flex;
  flex-wrap: wrap;
}

.upload {
  width: 100%;
  flex: none;
}

.preview {
  flex: 0 0 50%;
  font-size: 0;
}

.swatches {
  flex: 0 0 50%;
  display: flex;
  transition: all 0.2s ease-in-out;
}

.preview-label,
.sample-label {
  display: flex;
  flex: 0 0 50%;
  background-color: #aaa;
  text-align: center;
  color: #fff;
  padding: 5px 0 5px 10px;
  box-sizing: border-box;
  margin-top: 10px;
}

.preview-label {
  border-right: 1px solid #fff;
}

.sample-label {
  border-left: 1px solid #fff;
}

.swatches > div {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  transition: all 0.2s ease-in-out;
}

.swatches .tile {
  padding-bottom: 33%;
}

canvas.sampler {
  position: absolute;
  top: 0;
  left: 0;
  pointer-events: none;
  z-index: -1;
  visibility: hidden;
}

.swatches.over > div{
  opacity: 0;
}

.media-layout {
  width: 100%;
  display: grid;
  grid-template-columns: 1fr 1fr;
}

@media all and (max-width: 800px) {
  .preview,
  .swatches,
  .preview-label,
  .sample-label {
    flex: none;
    width: 100%;
  }

  .media-layout {
    display: grid;
    grid-template-columns: 100%;
  }

  .preview-label {
    grid-row: 1/2;
  }

  .sample-label {
    grid-row: 3/4;
  }

  .preview {
    grid-row: 2/3;
  }

  .swatches {
    grid-row: 4/5;
  }

  /* .swatches.over {
    transform: translate3d(0, -100%, 0);
    opacity: 0 !important;
  }
  .swatches {
    opacity: 1 !important;
    transform: translate3d(0, -100%, 0);
    transition: transform 0s ease-in-out, opacity 1s ease-in-out;
  } */
}

